# advent_of_code_2023

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
day1/: README.md  day1_part1.py  day1_part2.py  test_day1.py  test_input_p2.txt
day2/: day2_part1.py  day2_part2.py  test_day2.py
day3/: README.md  day3_part1.py  day3_part2.py
day4/: README.md  day4_part1.py  day4_part2.py  test_day4.py
